# semper-7.0beta

./: BUGS  ChangeLog  Comp.sh  Current_Issues.txt  Debug.sh  Debug_comp  GettingStarted  INSTALL  Makefile.am  Makefile.in  More_ToDo  README  Readme.MacOS  ToDo  VersionChanges  WOS_to_DO  acinclude.m4  bug_list  config.guess  config.h.in  configure  configure.ac  cygshelp.sh  ll-loops  mit-frame-pointer  software_install_guide.doc  software_install_guide.docx  software_install_guide.md
CVS/: Entries  Repository
Commands/: Makefile.am  Makefile.in  acf.f  analy2.f  analys.f  basfit.f  beep.f  blkvar.f  bmmap.f  bmproc.f  bopclo.f  box.f  cache.f  calc.f  chull.f  colour.f  covar.f  ctf1.f  ctf2.f  cut.f  ddiler.f  deass.f  destrp.f  disp.f  dlabel.f  dlabl5.f  dmanu.f  dopclo.f  drag.f  dskiz.f  dt.f  dzone.f  echo.f  editor.f  erase.f  eventc.f  exampd.f  extra2.f  extra4.f  extrct.f  (+103 more)
Commands/CVS/: Entries  Repository
Commands/LDM_Old_Version/: analys.f  ask.f  assig.f  bakpro.f  bdiler.f  bhmt.f  blkmea.f  bmlut.f  bmmap.f  bopclo.f  box.f  bprint.f  cache.f  chull.f  closed.f  cls.f  colour.f  copyp.f  corect.f  covar.f  cut.f  ddiler.f  deass.f  destrp.f  differ.f  dlabel.f  dlabl3.f  dlabl5.f  dopclo.f  drag.f  dskiz.f  dt.f  dzone.f  edge.f  edstub.f  erase.f  eventc.f  exampd.f  expand.f  extime.f  (+85 more)
Commands/LDM_Old_Version/CVS/: Entries  Repository
Demo/: Makefile.am  Makefile.in  asshdr_d.f  assig_d.f  assold_d.f  semini_d.f
Examples/: Helpinfo.shl  Makefile.am  Makefile.in  README  newuser.run  semper.err  semper.syn  semper_d.syn
Examples/CVS/: Entries  Repository  Root
Graphics/: Makefile.am  Makefile.in  fsampl.f  fsarc.f  fsarro.f  fsband.f  fsbord.f  fscirc.f  fsclip.f  fsctyp.f  fscurs.f  fscurv.f  fsdrag.f  fsedge.f  fselec.f  fseras.f  fsflus.f  fsinit.f  fsline.f  fslist.f  fslurw.f  fsmark.f  fsoptn.f  fsovrw.f  fsqbor.f  fsqcha.f  fsqlim.f  fsqmon.f  fsqtra.f  fsregn.f  fsrow.f  fstext.f  fsview.f  fsxwir.f
Graphics/CVS/: Entries  Repository
IO/: inpbmp.f  inpnem.f  inpras.f  inpraw.f  inptif.f  inpunf.f  inputf.f  iosubs.f  outbmp.f  outptf.f  outras.f  outraw.f  outtif.f  outunf.f
Includes/: COMMON  EVENTS  Makefile.am  Makefile.in  PARAMS_i2  UIFERR  params.h_i4
Includes_64bit/: LOGINDEX  Makefile  PARAMS_i4_old  STORECOM
Includes_C/: EMFDCL_old  EQCOM  EQXCOM  ICSET  Makefile  Makefile.in  PARAMS_old  UIFCOM_old  UIXCOM_old  ftypes.h_i2  ftypes.h_i4  params.h_i2
Kernel/: Makefile.am  Makefile.in  convert.f  disc.f  eqbsup.f  eqgetd.f  eqksup.f  eqpsup.f  eqsetd.f  eqssup.f  evclos.f  evflus.f  evopen.f  evqenq.f  filpat.f  fortde.f  fortrd.f  fortwr.f  fsoq61.f  fssubs.f  getcl.f  getfrm.f  getrg1.f  getrg2.f  getrng.f  inkey.f  kpress.f  kread.f  mkchar.f  mkicha.f  nblank.f  obeycl.f  pdelta.f  psigma.f  readln.f  semask.f  sembrk.f  semchs.f  semics.f  seminp.f  (+10 more)
Kernel/CVS/: Entries  Repository
Locals/: Makefile.am  Makefile.in
Locals/CVS/: Entries  Repository
Locals/NUlocals/: distrib.f  enter.f  exldm.f  hpldm.f  ice.f  labme.f  lmin.f  matrix-inversion.f  mfit.f  micro.f  pclose.f  picget.f  picget2.f  pput.f  print.f  shsem.f  wrapper.f
Locals/NUlocals/CVS/: Entries  Repository
Locals/WOSLocals/: crdwrt.c  crdwrt.f  emfds.f  erdwrt.f  funix.f  hrems.f  hrems1.f  hrems2.f  iirfil.f  iptget.f  ll.f  npsout.f  pl.f  roll.f  srdwrt.f  user.f  zrdwrt.f
Locals/WOSLocals/CVS/: Entries  Repository
Main/: Makefile.am  Makefile.in  cygshelp.sh  dskconv.c  helpman.f  semgen.f  semper.f  semper.syn
Main/.deps/CVS/: Repository
Main/CVS/: Entries  Repository
Middle/: Makefile.am  Makefile.in  abandn.f  assdis.f  assfil.f  asshdr.f  assmem.f  assnam.f  assnew.f  assold.f  assscr.f  asssiz.f  asstap.f  bmmdsk.f  bmmmem.f  bmpdsk.f  bmpmem.f  colft.f  compm.f  conopt.f  datstr.f  devices.f  dftm.f  dftm2.f  dftsub.f  dspsub.f  dthres.f  dtrans.f  ecdec.f  eqflus.f  eqinit.f  eqnext.f  eqnqre.f  eqread.f  eqsets.f  eqterm.f  filcio.f  filcls.f  fildcd.f  fildir.f  (+115 more)
Middle/CVS/: Entries  Repository
Patches/: Helpcom.sh  IsMotorola.f  Makefile.am  Makefile.in  SempBuild.c  accessf.c  filpos_v1.f  filpos_v2.f  getcwdf.c  helpfl6.f  ip12.c  ip4.c  ip5.c  ip6.c  ipbase.c  lnblnk.c  lnblnk1.f  lnblnk2.f  malloc.c  realloc.c  usleep.c  usleep_sgi.c
Patches/.deps/CVS/: Repository
Patches/CVS/: Entries  Repository
Patches/Help/CVS/: Repository
Patches/LDM_Version/: IsMotorola.f  LinkHelp.f  TSempBuild.f  access.f  filpos_v1.f  filpos_v2.f  helpfl6.f  tt.f
Patches/LDM_Version/CVS/: Entries  Repository
Primitives/: Makefile.am  Makefile.in  a1conv.c  ccache.c  cdisc.c  dcache.c  fs.c  gethid.c  mcdc61_test.f  mctime_test.f  mctp61.c  semhan.c  xrect.c
Primitives_64bit/: Checks  Makefile  Makefile.am  Makefile.in  bitfld.c  dcache.c  dcache.h  eikio.c  events.h  fsbuff.h  icset.h  mcdc61.c  mcdc61_test.f  mctime.c  semhan.c  xrect.c
Primitives_64bit/CVS/: Entries  Repository
Primitives_C/: Makefile  Makefile.in  cform.c  cform.c_old  cform.c_orig  cform_test.f  cunix.c  dcache.c  dcache.h  fs.c  gethid.c  mcdc61.c  mcdc61_test.f_i2  mcdc61_test.f_i4  mcdc61_test.f_old  mctime_test_i2.f  semhan.c  stdio.c  t  xrect.c
ProgramM/: Makefile.am  Makefile.in  pruadd.f  prucas.f  prucom.f  prucop.f  prudir.f  pruent.f  prufls.f  pruind.f  pruinf.f  prulab.f  prupri.f  prusho.f  pruslt.f  prusor.f  prutin.f
Test/: Hello.tif  Makefile.am  Makefile.in  README  T1.tif  Untitled.tif  afitdp.spl  extras.shl  fitdp.spl  oldsemper.spl  semper.run  semper.shl  semper.spl  shear.run  tutorial.run
Tutorial/: Makefile.am  Makefile.in  oldsemper.slib  oldsemper.spl  (+3 more)
UserInterface/: Makefile.am  Makefile.in  allocm.f  allocx.f  appact.f  applic.f  dfsdummy.f  dx11.f  freem.f  fsxs61.f  fsxw61.f  mspace.f  pindex.f  strings.f  uifape.f  uifcad.f  uifcbo.f  uifccc.f  uifcco.f  uifccy.f  uifcdo.f  uifcdr.f  uifcfc.f  uifchi.f  uifcic.f  uifcin.f  uifcof.f  uifcro.f  uifctc.f  uifcte.f  uifdac.f  uifdlo.f  uifdqu.f  uifdre.f  uifdrf.f  uifdsa.f  uifeac.f  uifeck.f  uifeco.f  uifecr.f  (+133 more)
UserInterface/CVS/: Entries  Repository
(+199 files in other folders)
