
INCLUDE = ../Includes

noinst_LIBRARIES = libsCommands.a

libsCommands_a_SOURCES =  \
acf.f	\
analy2.f	\
analys.f	\
ask.f	\
assig.f	\
bakpro.f	\
basfit.f	\
bdiler.f	\
beep.f	\
bhmt.f	\
blkmea.f	\
blkvar.f	\
bmlut.f	\
bmmap.f	\
bmproc.f	\
bopclo.f	\
box.f	\
bprint.f	\
cache.f	\
calc.f	\
chull.f	\
closed.f	\
cls.f	\
colour.f	\
copyp.f	\
corect.f	\
covar.f	\
ctf1.f	\
ctf2.f	\
cut.f	\
ddiler.f	\
deass.f	\
destrp.f	\
differ.f	\
disp.f	\
dlabel.f	\
dlabl3.f	\
dlabl5.f	\
dmanu.f	\
dopclo.f	\
drag.f	\
dskiz.f	\
dt.f	\
dzone.f	\
echo.f	\
edge.f	\
editor.f	\
edstub.f	\
erase.f	\
eventc.f	\
exampd.f	\
expand.f	\
extime.f	\
extra2.f	\
extra3.f	\
extra4.f	\
extrac.f	\
extrcb.f	\
extrct.f	\
extrnn.f	\
featur.f	\
fft.f	\
find.f	\
fir33.f	\
fir55.f	\
firfil.f	\
fitlc.f	\
fitsbd.f	\
flood.f	\
flushd.f	\
frdwrf.f	\
frdwrt.f	\
frdwru.f	\
gau.f	\
halful.f	\
hfill.f	\
hilbrt.f	\
histog.f	\
../IO/hplj.f	\
image.f	\
../IO/inputf.f	\
jump.f	\
label.f	\
labsub.f	\
lattic.f	\
letter.f	\
lmanu.f	\
locals.f	\
lpdet.f	\
lutadj.f	\
lutset.f	\
macro.f	\
magsr.f	\
mappix.f	\
mark.f	\
mask.f	\
mask1.f	\
mask2.f	\
mask3.f	\
maxlik.f	\
mindis.f	\
monitm.f	\
morph.f	\
motif.f	\
mrtran.f	\
noise.f	\
ocf.f	\
../IO/outptf.f	\
overly.f	\
ovread.f	\
ovwrit.f	\
page.f	\
partit.f	\
paste.f	\
pca.f	\
pcalc.f	\
pcurve.f	\
pdraw.f	\
peaks.f	\
peaksd.f	\
peaksr.f	\
pedit.f	\
pextr.f	\
pferet.f	\
pfiltr.f	\
phist.f	\
phrand.f	\
picdat.f	\
pictur.f	\
pid.f	\
pmanu.f	\
pmark.f	\
pmomen.f	\
porder.f	\
prdwrt.f	\
printc.f	\
projec.f	\
ps.f	\
pset.f	\
pshow.f	\
psout.f	\
psout0.f	\
psout1.f	\
psout2.f	\
psout3.f	\
psout4.f	\
psout5.f	\
psout6.f	\
pssubs.f	\
ptype.f	\
pxcon.f	\
pxsca.f	\
radx50.f	\
ramps.f	\
rank.f	\
rcf.f	\
reinit.f	\
report.f	\
retur.f	\
rewin.f	\
rfiltr.f	\
rgb.f	\
saver.f	\
sectn.f	\
semend.f	\
semfor.f	\
semlib.f	\
semloo.f	\
semnxt.f	\
sempix.f	\
semrun.f	\
semsig.f	\
semslg.f	\
semsyn.f	\
separt.f	\
sheet.f	\
show.f	\
show0.f	\
show1.f	\
show2.f	\
show3.f	\
show4.f	\
show5.f	\
show6.f	\
show7.f	\
show8.f	\
show9.f	\
showlf.f	\
shownl.f	\
showno.f	\
showsy.f	\
sketch.f	\
solid.f	\
stack.f	\
survey.f	\
thresh.f	\
train.f	\
turn.f	\
type.f	\
vgcon.f	\
view.f	\
waitu.f	\
walsh.f	\
warp.f	\
warp2.f	\
warp3.f	\
weight.f	\
window.f	\
xcf.f	\
xwires.f	\
ymod.f
