Exampledir = $(prefix)/Examples

dist_Example_DATA = \
        extras.shl flower.dat newuser.run  \
        semper_d.syn semper.err  \
        semper.run  semper.shl semper.spl  \
        semper.syn  README

Helpdir = $(prefix)/help
        dist_Help_DATA = Helpinfo.shl

#Put into executable path as well so semper can find them
Initdir = $(prefix)/bin
        dist_Init_DATA = \
        extras.shl flower.dat newuser.run  \
        semper_d.syn semper.err  \
        semper.run  semper.shl semper.spl  \
        semper.syn  README

