
INCLUDE = ../Includes

noinst_LIBRARIES = libsGraphics.a

libsGraphics_a_SOURCES =  \
fsampl.f	\
fsarc.f	\
fsarro.f	\
fsband.f	\
fsbord.f	\
fscirc.f	\
fsclip.f	\
fsctyp.f	\
fscurs.f	\
fscurv.f	\
fsdrag.f	\
fsedge.f	\
fselec.f	\
fseras.f	\
fsflus.f	\
fsinit.f	\
fsline.f	\
fslist.f	\
fslurw.f	\
fsmark.f	\
fsoptn.f	\
fsovrw.f	\
fsqbor.f	\
fsqcha.f	\
fsqlim.f	\
fsqmon.f	\
fsqtra.f	\
fsregn.f	\
fsrow.f	\
fstext.f	\
fsview.f	\
fsxwir.f
