INCLUDES = ../Includes

noinst_LIBRARIES = libsKernel.a

libsKernel_a_SOURCES = \
convert.f	\
disc.f	\
eqbsup.f	\
eqgetd.f	\
eqksup.f	\
eqpsup.f	\
eqsetd.f	\
eqssup.f	\
evclos.f	\
evflus.f	\
evopen.f	\
evqenq.f	\
filpat.f	\
fortde.f	\
fortrd.f	\
fortwr.f	\
fsoq61.f	\
fssubs.f	\
getcl.f	\
getfrm.f	\
getrg1.f	\
getrg2.f	\
getrng.f	\
inkey.f	\
kpress.f	\
kread.f	\
mkchar.f	\
mkicha.f	\
nblank.f	\
obeycl.f	\
pdelta.f	\
psigma.f	\
readln.f	\
semask.f	\
sembrk.f	\
semchs.f	\
semics.f	\
seminp.f	\
semint.f	\
semmon.f	\
sempro.f	\
semsel.f	\
semtit.f	\
semxa1.f	\
setvar.f	\
unsetv.f	\
varint.f	\
waits.f
