
INCLUDE = ../Includes

noinst_LIBRARIES = libsLocals.a

libsLocals_a_SOURCES =  \
WOSLocals/crdwrt.f  WOSLocals/funix.f   WOSLocals/iptget.f  WOSLocals/pl.f      WOSLocals/user.f \
WOSLocals/emfds.f   WOSLocals/hrems1.f WOSLocals/hrems2.f   WOSLocals/ll.f      WOSLocals/roll.f    WOSLocals/zrdwrt.f \
WOSLocals/erdwrt.f  WOSLocals/iirfil.f  WOSLocals/npsout.f  WOSLocals/srdwrt.f \
NUlocals/distrib.f  NUlocals/lmin.f    NUlocals/print.f \
NUlocals/enter.f        NUlocals/hpldm.f     NUlocals/mfit.f    \
NUlocals/exldm.f        NUlocals/ice.f       NUlocals/shsem.f \
NUlocals/pclose.f  NUlocals/wrapper.f \
NUlocals/labme.f     NUlocals/pput.f  \
NUlocals/matrix-inversion.f NUlocals/micro.f NUlocals/picget.f NUlocals/picget2.f

#To be fixed
#NUlocals/get6_ldm.f NUlocals/fread.f NUlocals/inquire6.f
#NUlocals/fset_semper.f  NUlocals/zhang.f
