
INCLUDE = ../Includes

noinst_LIBRARIES = libsMiddle.a

libsMiddle_a_SOURCES =  \
abandn.f	\
assdis.f	\
assfil.f	\
asshdr.f	\
assmem.f	\
assnam.f	\
assnew.f	\
assold.f	\
assscr.f	\
asssiz.f	\
asstap.f	\
bmmdsk.f	\
bmmmem.f	\
bmpdsk.f	\
bmpmem.f	\
colft.f	\
compm.f	\
conopt.f	\
datstr.f	\
devices.f	\
dftm.f	\
dftm2.f	\
dftsub.f	\
dspsub.f	\
dthres.f	\
dtrans.f	\
ecdec.f	\
eqflus.f	\
eqinit.f	\
eqnext.f	\
eqnqre.f	\
eqread.f	\
eqsets.f	\
eqterm.f	\
filcio.f	\
filcls.f	\
fildcd.f	\
fildir.f	\
filelm.f	\
filexi.f	\
filmak.f	\
filopn.f	\
filsea.f	\
findcm.f	\
ft1d.f	\
ft2d.f	\
gamfn.f	\
genhst.f	\
getpat.f	\
gettmp.f	\
graph.f	\
initm.f	\
../IO/inpbmp.f	\
inpdef.f	\
../IO/inpnem.f	\
../IO/inpras.f	\
../IO/inpraw.f	\
../IO/inptif.f	\
../IO/inpunf.f	\
invdet.f	\
invft2.f	\
iosmsg.f	\
../IO/iosubs.f	\
ipack.f	\
ival.f	\
ivalpn.f	\
kline.f	\
lmanus.f	\
lutsub.f	\
magsub.f	\
marset.f	\
meansd.f	\
mrkreg.f	\
opt.f	\
optno.f	\
../IO/outbmp.f	\
outdef.f	\
outnew.f	\
../IO/outras.f	\
../IO/outraw.f	\
../IO/outtif.f	\
../IO/outunf.f	\
psort.f	\
range.f	\
rsum1d.f	\
sembee.f	\
semcen.f	\
semcls.f	\
semcom.f	\
semcon.f	\
semcp2.f	\
semcpw.f	\
semctx.f	\
semdcr.f	\
semdel.f	\
semdia.f	\
semdpd.f	\
semdpn.f	\
semech.f	\
semenv.f	\
semeol.f	\
semerr.f	\
semexp.f	\
semfac.f	\
semfil.f	\
semfrm.f ../IO/semfrmf.f	\
semfvd.f	\
semhel.f	\
semin2.f	\
semini.f	\
seminx.f	\
semioe.f	\
semjmp.f	\
semktx.f	\
semlab.f	\
semlin.f	\
semlnf.f	\
semlog.f	\
semlu.f	\
semlut.f	\
semmac.f	\
semmed.f	\
semmor.f	\
semopn.f	\
sempag.f	\
semppn.f	\
semprg.f	\
semret.f	\
semrng.f	\
semrow.f	\
semser.f	\
semsol.f	\
semsop.f	\
semsou.f	\
semszz.f	\
semtbk.f	\
semtfc.f	\
semtps.f	\
semtyp.f	\
semunw.f	\
semwai.f	\
semxpl.f	\
semzzz.f	\
setppr.f	\
tape.f	\
textu1.f	\
textu2.f	\
textu3.f	\
timstr.f	\
tstsrg.f	\
unpack.f	\
uvcell.f	\
uvdevi.f	\
uvele1.f	\
uvele2.f	\
uvexec.f	\
uvjust.f	\
uvmenu.f	\
uvmous.f	\
uvpane.f	\
uvtext.f	\
uvuif.f	\
val.f	\
varset.f	\
yesno.f
