
INCLUDE = ../Includes

noinst_LIBRARIES = libsUserInterface.a

libsUserInterface_a_SOURCES =  \
allocm.f	\
allocx.f	\
appact.f	\
applic.f	\
dfsdummy.f	\
dx11.f	\
freem.f	\
fsxs61.f	\
fsxw61.f	\
mspace.f	\
pindex.f	\
strings.f	\
uifape.f	\
uifcad.f	\
uifcbo.f	\
uifccc.f	\
uifcco.f	\
uifccy.f	\
uifcdo.f	\
uifcdr.f	\
uifcfc.f	\
uifchi.f	\
uifcic.f	\
uifcin.f	\
uifcof.f	\
uifcro.f	\
uifctc.f	\
uifcte.f	\
uifdac.f	\
uifdlo.f	\
uifdqu.f	\
uifdre.f	\
uifdrf.f	\
uifdsa.f	\
uifeac.f	\
uifeck.f	\
uifeco.f	\
uifecr.f	\
uifede.f	\
uifedr.f	\
uifena.f	\
uifepo.f	\
uifesi.f	\
uifiaf.f	\
uifiba.f	\
uifibe.f	\
uifigo.f	\
uifiju.f	\
uifini.f	\
uifinp.f	\
uifite.f	\
uifmac.f	\
uifmda.f	\
uifmdr.f	\
uifmob.f	\
uifmoe.f	\
uifmop.f	\
uifmoq.f	\
uifmst.f	\
uifmty.f	\
uifpau.f	\
uifpco.f	\
uifpcr.f	\
uifpde.f	\
uifphi.f	\
uifpma.f	\
uifpna.f	\
uifppo.f	\
uifpsh.f	\
uifpsi.f	\
uifptr.f	\
uifrea1.f uifrea2.f	\
uifsac.f	\
uifsad.f	\
uifsas.f	\
uifsav1.f uifsav2.f	\
uifsaw.f	\
uifsaz.f	\
uifscs.f	\
uifssu.f	\
uifsta.f	\
uiftap.f	\
uiftas.f	\
uiftco.f	\
uiftcp.f	\
uiftde.f	\
uiftdr.f	\
uiftex.f	\
uiftin.f	\
uiftle.f	\
uiftnu.f	\
uiftou.f	\
uiftse.f	\
uiftta.f	\
uiftva.f	\
uiftwp.f	\
uixcdh.f	\
uixcmp.f	\
uixcpo.f	\
uixcpu.f	\
uixcsi.f	\
uixdre.f	\
uixein.f	\
uixepo.f	\
uixfil.f	\
uixgcl.f	\
uixica.f	\
uixicm.f	\
uixinp.f	\
uixint.f	\
uixipb.f	\
uixipe.f	\
uixipk.f	\
uixipp.f	\
uixisd.f	\
uixise.f	\
uixmsi.f	\
uixobs.f	\
uixoin.f	\
uixpdr.f	\
uixpin.f	\
uixque.f	\
uixsad.f	\
uixscl.f	\
uixsin.f	\
uixsof.f	\
uixtsi.f	\
uixwin.f	\
wdxbox.f	\
wdxclr.f	\
wdxcol.f	\
wdxcre.f	\
wdxdes.f	\
wdxhid.f	\
wdxpos.f	\
wdxsho.f	\
wdxtex.f	\
wfsbox.f	\
wfsclr.f	\
wfscna.f	\
wfscol.f	\
wfscre.f	\
wfsdes.f	\
wfshid.f	\
wfspos.f	\
wfssho.f	\
wfstex.f	\
whobox.f	\
whoclr.f	\
whocna.f	\
whocol.f	\
whocre.f	\
whodes.f	\
whohid.f	\
whopos.f	\
whosho.f	\
whotex.f	\
winbox.f	\
winclr.f	\
wincna.f	\
wincol.f	\
wincre.f	\
windes.f	\
winhid.f	\
winpos.f	\
winsho.f	\
wintex.f
